--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,9 +10,27 @@
 
 .library {
     flex-grow: 2;
-    width: 70%;
+    width: 62%;
+    height: 100vh;
     padding: 6rem;
     z-index: 1;
+}
+
+.schedule {
+    flex-grow: 1;
+    background: linear-gradient(118.95deg, #6F48CE 0%, #32CBE8 100%);
+    width: 38%;
+    height: 100vh;
+    text-align: center;
+    padding: 12rem 6rem;
+}
+
+.schedule__header {
+    border: none;
+    border-left: 1px solid white;
+    color: white;
+    font-size: 20px;
+    line-height: 27px;
 }
 
 .library__header {
@@ -24,12 +42,6 @@
     font-size: 34px;
     font-weight: bold;
     line-height: 47px;
-}
-
-.schedule {
-    flex-grow: 1;
-    width: 30%;
-    background: linear-gradient(118.95deg, #6F48CE 0%, #32CBE8 100%);
 }
 
 ul {
@@ -68,20 +80,6 @@ ul li {
     font-size: 16px;
     font-weight: bold;
     line-height: 22px;
-}
-
-.slot__course {
-	background-color: white;
-	color: black;
-	border: 1px solid rgba(255,255,255,0.6);
-}
-
-.slot__empty {
-	opacity: 0.75;
-	border-color: transparent;
-	border: 1px solid rgba(255,255,255,0.6);
-	border-style: dashed;
-	color: white;
 }
 
 .show-content {
