--- a/src/style/components/courseLibrary.scss
+++ b/src/style/components/courseLibrary.scss
@@ -1,7 +1,15 @@
+.action {
+    transition: all .3s ease;
+}
+
+
 .course:hover {
     background-color: white;    
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
     transition: all .4s ease;
+    .action {
+        opacity: 1;
+    }
 }
 
 .course__info {
@@ -11,30 +19,33 @@
     width: 100%;
 }
 
+
 .course__arrow {
-	border-left: 8px solid transparent;
-	border-right: 8px solid transparent;
-	border-bottom: 8px solid #487BCE;
-	transition: all .3s ease;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 8px solid #487BCE;
+    transition: all .3s ease;
 }
 
 .course__arrow-close {
-	transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
+
+
 .course__title-container {
-	width: 85%;
-	display: flex;
-	justify-content: left;
-	align-items: center;
+    width: 85%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
 }
 
 .course__selected {
-	background-color: white;
-	box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
+    background-color: white;
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
 }
 
 .course {
-	min-height: 60px;
-	transition: all .4s ease;
+    min-height: 60px;
+    transition: all .4s ease;
 }
