--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -25,11 +25,13 @@
     padding: 12rem 6rem;
 }
 
+
 .schedule__header {
     border: none;
     border-left: 1px solid white;
-    color: white;
+    color:white;
     font-size: 20px;
+    font-family: 'Alegreya', serif;
     line-height: 27px;
 }
 
@@ -44,9 +46,11 @@
     line-height: 47px;
 }
 
+
 ul {
     list-style-type: none;
     margin: 0 25px;
+    margin-top: 50px;
     padding: 0;
     width: 120%;
 }
@@ -82,10 +86,12 @@ ul li {
     line-height: 22px;
 }
 
+
+
 .show-content {
-	display: block;
+    display: block;
 }
 
 .hide-content {
-	display: none;
+    display: none;
 }
