added course checkmark styles

--- a/src/style/components/courseLibrary.scss
+++ b/src/style/components/courseLibrary.scss
@@ -2,7 +2,6 @@
     transition: all .3s ease;
 }
 
-
 .course:hover {
     background-color: white;    
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
@@ -19,7 +18,6 @@
     width: 100%;
 }
 
-
 .course__arrow {
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
@@ -30,8 +28,6 @@
 .course__arrow-close {
     transform: rotate(180deg);
 }
-
-
 
 .course__title-container {
     width: 85%;
@@ -48,4 +44,29 @@
 .course {
     min-height: 60px;
     transition: all .4s ease;
+}
+
+.course__check-mark {
+	&:after {
+		content: '';
+		display: block;
+
+		width: 10px;
+		height: 20px;
+
+		margin-left: 18px;
+		transform: rotate(45deg);
+
+		border: solid #487BCE;
+		border-width: 0 2.5px 2.5px 0;
+	}
+}
+
+.show-content-fade {
+	transition: all .2s ease;
+}
+
+.hide-content-fade {
+	opacity: 0;
+	transform: scale(0.8) translateX(-10px);
 }
