--- a/src/style/components/courseLibrary.scss
+++ b/src/style/components/courseLibrary.scss
@@ -2,6 +2,7 @@
     transition: all .3s ease;
 }
 
+
 .course:hover {
     background-color: white;    
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
@@ -17,6 +18,7 @@
     align-items: center;
     width: 100%;
 }
+
 
 .course__arrow {
     border-left: 8px solid transparent;
@@ -47,29 +49,32 @@
 }
 
 .course__check-mark {
-	&:after {
-		content: '';
-		display: block;
+    &:after {
+        content: '';
+        display: block;
 
-		width: 10px;
-		height: 20px;
+        width: 10px;
+        height: 20px;
 
-		margin-left: 18px;
-		transform: rotate(45deg);
+        margin-left: 18px;
+        transform: rotate(45deg);
 
-		border: solid #487BCE;
-		border-width: 0 2.5px 2.5px 0;
-	}
+        border: solid #487bce;
+        border-width: 0 2.5px 2.5px 0;
+    }
 }
 
 .show-content-fade {
-	transition: all .2s ease;
+    transition: all .2s ease;
 }
 
 .hide-content-fade {
-	opacity: 0;
-	transform: scale(0.8) translateX(-10px);
+    opacity: 0;
+    transform: scale(0.8) translateX(-10px);
+    transition: all .2s ease;
 }
+
+//
 
 @mixin position-center {
     position: absolute;
@@ -92,6 +97,7 @@
         display: block;
         background-color: white;
         @include position-center;
+        transition: all .3s ease;
     }
 
     &:before {
@@ -111,14 +117,14 @@
 
 .course__remove {
     @include add-button;
-    transform: rotate(45deg);
+    //transform: rotate(45deg);
 
-    // &:before {
-    //     transform: translate(-50%, -50%) rotate(45deg);
-    // }
+    &:before {
+        transform: translate(-50%, -50%) rotate(45deg);
+    }
 
-    // &:after {
-    //     transform: translate(-50%, -50%) rotate(45deg);
-    // }
+    &:after {
+        transform: translate(-50%, -50%) rotate(-135deg);
+    }
 
 }
