--- a/src/style/components/courseLibrary.scss
+++ b/src/style/components/courseLibrary.scss
@@ -128,3 +128,13 @@
     }
 
 }
+
+.slot__remove {
+	@include add-button;
+	transform: translateY(-50%) rotate(45deg);
+	display: inline-block;
+	position: absolute;
+	right: 13px;
+	top: 50%;
+
+}
